Implement adding and saving notes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="note_title">Title</string>
+    <string name="note_text">Text</string>
 </resources>
