--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="notes">Notes</string>
     <string name="note_title">Title</string>
     <string name="note_text">Text</string>
 </resources>
